--- a/src/app/components/blocks/slider/slider.component.html
+++ b/src/app/components/blocks/slider/slider.component.html
@@ -3,13 +3,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/1.png" class="d-block w-100" alt="Чай с апельсином">
+          <img src="assets/images/1.png" class="d-block w-100" alt="Чай с апельсином">
         </div>
         <div class="carousel-item">
-          <img src="images/2.png" class="d-block w-100" alt="Чай с лепестками">
+          <img src="assets/images/2.png" class="d-block w-100" alt="Чай с лепестками">
         </div>
         <div class="carousel-item">
-          <img src="images/3.png" class="d-block w-100" alt="Чай с клюквой">
+          <img src="assets/images/3.png" class="d-block w-100" alt="Чай с клюквой">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
