--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -19,6 +19,10 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/catalog">Каталог</a>
         </li>
+<!--        TODO remove after making btn redirect functionality -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/order">Submit Order</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Поиск чая" aria-label="Search">
