Add one-item component layout

--- a/src/app/components/blocks/one-item/one-item.component.html
+++ b/src/app/components/blocks/one-item/one-item.component.html
@@ -1,1 +1,15 @@
-<p>one-item works!</p>
+<section class="one-item py-5">
+  <div class="one-item-block d-flex flex-column justify-content-center align-items-center">
+    <h2 class="h2 title">Заголовок товара</h2>
+    <div class="image-wrapper mt-4">
+      <img class="image-img" src="assets/images/cards/card1.png" alt="Картинка товара">
+    </div>
+    <p class="description mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci distinctio dolores
+      expedita laboriosam minus nostrum numquam odio quam! Atque et, id libero minus modi quaerat sit suscipit ullam.
+      Provident, sint!</p>
+    <div class="price-and-buy d-flex gap-2">
+      <span class="badge price bg-info mt-2">200$</span>
+      <button class="mt-2 btn buy btn-primary">Купить</button>
+    </div>
+  </div>
+</section>
