--- a/src/app/components/blocks/one-item/one-item.component.html
+++ b/src/app/components/blocks/one-item/one-item.component.html
@@ -1,15 +1,26 @@
-<section class="one-item py-5">
-  <div class="one-item-block d-flex flex-column justify-content-center align-items-center">
-    <h2 class="h2 title">Заголовок товара</h2>
+<section class="one-item py-5" [ngClass]="{'full-height': isEmptyPage}">
+  <div
+    *ngIf="!isEmptyPage"
+    class="one-item-block d-flex flex-column justify-content-center align-items-center">
+    <h2 class="h2 title">{{teaItem.title}}</h2>
     <div class="image-wrapper mt-4">
-      <img class="image-img" src="assets/images/cards/card1.png" alt="Картинка товара">
+      <img class="image-img" src="{{teaItem.image}}" alt="{{teaItem.title}}">
     </div>
-    <p class="description mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci distinctio dolores
-      expedita laboriosam minus nostrum numquam odio quam! Atque et, id libero minus modi quaerat sit suscipit ullam.
-      Provident, sint!</p>
     <div class="price-and-buy d-flex gap-2">
-      <span class="badge price bg-info mt-2">200$</span>
+      <span class="badge price bg-info mt-2">{{teaItem.price | currency : 'KZT' : '₸'}}</span>
       <button class="mt-2 btn buy btn-primary">Купить</button>
     </div>
+    <p class="description mt-4">{{teaItem.description}}</p>
   </div>
+  <div
+    *ngIf="isEmptyPage"
+    class="empty-message">
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading">Ошибка!</h4>
+      <p>Не удалось получить информацию о каталоге товаров от сервера. Попробуйте обновить страницу</p>
+      <hr>
+      <p class="mb-0">Мы делаем все возможное чтобы наладить работу сайта</p>
+    </div>
+  </div>
+
 </section>
