Add redirect to order form with inserting item title into it

--- a/src/app/components/blocks/one-item/one-item.component.html
+++ b/src/app/components/blocks/one-item/one-item.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="price-and-buy d-flex gap-2">
       <span class="badge price bg-info mt-2">{{teaItem.price | currency : 'KZT' : '₸'}}</span>
-      <button class="mt-2 btn buy btn-primary">Купить</button>
+      <button class="mt-2 btn buy btn-primary" (click)="buyItem()">Купить</button>
     </div>
     <p class="description mt-4">{{teaItem.description}}</p>
   </div>
