Add rxjs form in order-form component

--- a/src/app/components/blocks/order-form/order-form.component.html
+++ b/src/app/components/blocks/order-form/order-form.component.html
@@ -1,49 +1,64 @@
 <section class="form pt-5 pb-5">
   <div class="container">
-    <form class="col-lg-6 m-auto" id="form" action="" method="post">
+    <form class="col-lg-6 m-auto" id="form" action="" novalidate [formGroup]="orderForm">
       <h2 class="text-center mb-5">
         Сделать заказ
       </h2>
       <div class="mb-3 row g-4 align-items-center">
         <div class="col-sm-12 col-md-4">
           <label for="inputFirstName" class="form-label">Имя</label>
-          <input type="text" id="inputFirstName" class="form-control"
-                 aria-describedby="firstNameHelpInline">
+          <input
+            formControlName="firstName"
+            type="text" id="inputFirstName" class="form-control"
+            aria-describedby="firstNameHelpInline">
         </div>
         <div class="col-sm-12 col-md-4">
           <label for="inputLastName" class="form-label">Фамилия</label>
-          <input type="text" id="inputLastName" class="form-control"
-                 aria-describedby="lastNameHelpInline">
+          <input
+            formControlName="lastName"
+            type="text" id="inputLastName" class="form-control"
+            aria-describedby="lastNameHelpInline">
         </div>
         <div class="col-sm-12 col-md-4">
           <label for="inputPhone" class="form-label">Телефон</label>
-          <input type="tel" id="inputPhone" class="form-control"
-                 aria-describedby="phoneHelpInline">
+          <input
+            formControlName="phone"
+            type="tel" id="inputPhone" class="form-control"
+            aria-describedby="phoneHelpInline">
         </div>
       </div>
       <div class="mb-3 row g-4 align-items-center">
         <div class="col">
           <label for="inputCountry" class="form-label">Страна</label>
-          <input type="text" class="form-control" id="inputCountry" aria-describedby="emailHelp">
+          <input
+            formControlName="country"
+            type="text" class="form-control" id="inputCountry" aria-describedby="emailHelp">
         </div>
         <div class="col">
           <label for="inputPostalCode" class="form-label">Индекс</label>
-          <input type="number" class="form-control" id="inputPostalCode">
+          <input
+            formControlName="zip"
+            type="number" class="form-control" id="inputPostalCode">
         </div>
       </div>
       <div class="mb-3">
         <label for="inputAddress" class="form-label">Адрес</label>
-        <input type="text" class="form-control" id="inputAddress">
+        <input
+          formControlName="address"
+          type="text" class="form-control" id="inputAddress">
       </div>
       <div class="mb-3">
-        <label for="inputAddress" class="form-label">Товар</label>
+        <label for="teaItem" class="form-label">Товар</label>
         <input
-          [value]="itemTitle"
-          disabled type="text" class="form-control" id="product">
+          formControlName="teaItem"
+          type="text" class="form-control" id="teaItem">
       </div>
       <div class="mb-3">
         <label for="comment" class="form-label">Комментарий к заказу</label>
-        <textarea id="comment" class="form-control" aria-label="With textarea" data-dl-input-translation="true"></textarea>
+        <textarea
+          formControlName="comment"
+          id="comment" class="form-control" aria-label="With textarea"
+          data-dl-input-translation="true"></textarea>
       </div>
       <div class="mb-3">
         <button type="submit" class="btn btn-primary btn-w hvr-forward">Отправить</button>
