--- a/src/app/components/blocks/order-form/order-form.component.html
+++ b/src/app/components/blocks/order-form/order-form.component.html
@@ -1,6 +1,6 @@
 <section class="form pt-5 pb-5">
   <div class="container">
-    <form class="col-lg-6 m-auto" id="form" action="" novalidate [formGroup]="orderForm">
+    <form *ngIf="!formSubmitted || !successfulResponse" class="col-lg-6 m-auto" id="form" action="" novalidate [formGroup]="orderForm">
       <h2 class="text-center mb-5">
         Сделать заказ
       </h2>
@@ -132,11 +132,12 @@
           data-dl-input-translation="true"></textarea>
       </div>
       <div class="mb-3">
-        <button type="submit" class="btn btn-primary btn-w hvr-forward" (click)="onSubmit()">Отправить</button>
+        <button type="button" class="btn btn-primary btn-w hvr-forward" (click)="onSubmit()">Отправить</button>
+        <span *ngIf="formSubmitted && !successfulResponse" class="error-text link-danger mx-3">Произошла ошибка. Попробуйте еще раз</span>
       </div>
     </form>
-    <div class="thanks">
-      <h2 class="text-center mb-5 hidden" id="thanks">
+    <div *ngIf="formSubmitted && successfulResponse" class="thanks">
+      <h2 class="text-center mb-5" id="thanks">
         Спасибо за заказ,
         мы свяжемся с вами в ближайшее время!
       </h2>
