Handle HttpException and show error in order-form

--- a/src/app/components/blocks/order-form/order-form.component.html
+++ b/src/app/components/blocks/order-form/order-form.component.html
@@ -1,6 +1,6 @@
 <section class="form pt-5 pb-5">
   <div class="container">
-    <form *ngIf="!formSubmitted || !successfulResponse" class="col-lg-6 m-auto" id="form" action="" novalidate [formGroup]="orderForm">
+    <form *ngIf="!formSubmitted || !successfulResponse" class="col-lg-6 m-auto order-form" id="form" action="" novalidate [formGroup]="orderForm">
       <h2 class="text-center mb-5">
         Сделать заказ
       </h2>
