--- a/src/app/components/blocks/goods/goods.component.html
+++ b/src/app/components/blocks/goods/goods.component.html
@@ -32,6 +32,11 @@
           <p class="mb-0">Мы делаем все возможное чтобы наладить работу сайта</p>
         </div>
       </div>
+      <div
+        *ngIf="loading"
+        class="spinner-border text-primary loader" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
     </div>
   </div>
 </section>
