--- a/src/app/components/blocks/goods/goods.component.scss
+++ b/src/app/components/blocks/goods/goods.component.scss
@@ -2,3 +2,10 @@
   max-width: 400px;
   align-self: center;
 }
+
+.loader {
+  margin: 0 auto;
+  display: flex;
+  width: 100px;
+  height: 100px;
+}
