--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -9,6 +9,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page"
+             (click)="clearSearchItem()"
              routerLink="/"
              routerLinkActive="active"
              [routerLinkActiveOptions]="{exact: true}"
@@ -17,12 +18,21 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/catalog">Каталог</a>
+          <a
+            (click)="clearSearchItem()"
+            routerLink="/catalog"
+            class="nav-link" >Каталог</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Поиск чая" aria-label="Search">
-        <button class="btn btn-outline-primary hvr-grow" type="submit">Найти</button>
+        <input
+          [formControl]="searchBarControl"
+          (search)="onSubmit()"
+          class="form-control me-2" type="search" placeholder="Поиск чая" aria-label="Search">
+        <button
+          (click)="onSubmit()"
+          value=""
+          class="btn btn-outline-primary hvr-grow" type="button">Найти</button>
       </form>
     </div>
   </div>
