Remove bootstrap and add ng-bootstrap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,6 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
