--- a/src/app/components/blocks/slider/slider.component.html
+++ b/src/app/components/blocks/slider/slider.component.html
@@ -1,27 +1,25 @@
 <section class="banner py-lg-5 py-md-3">
   <div class="container-md">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
+    <ngb-carousel
+      [interval]="sliderInterval"
+      [pauseOnHover]="pauseOnHover"
+      [pauseOnFocus]="pauseOnFocus"
+    >
+      <ng-template ngbSlide>
+        <div class="img-wrapper">
           <img src="assets/images/1.png" class="d-block w-100" alt="Чай с апельсином">
         </div>
-        <div class="carousel-item">
+      </ng-template>
+      <ng-template ngbSlide>
+        <div class="img-wrapper">
           <img src="assets/images/2.png" class="d-block w-100" alt="Чай с лепестками">
         </div>
-        <div class="carousel-item">
+      </ng-template>
+      <ng-template ngbSlide>
+        <div class="img-wrapper">
           <img src="assets/images/3.png" class="d-block w-100" alt="Чай с клюквой">
         </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-              data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-              data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+      </ng-template>
+    </ngb-carousel>
   </div>
 </section>
