Update image paths again

--- a/src/app/views/main/blocks/slider/slider.component.html
+++ b/src/app/views/main/blocks/slider/slider.component.html
@@ -7,17 +7,17 @@
     >
       <ng-template ngbSlide>
         <div class="img-wrapper">
-          <img src="assets/images/1.png" class="d-block w-100" alt="Чай с апельсином">
+          <img src="/assets/images/1.png" class="d-block w-100" alt="Чай с апельсином">
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="img-wrapper">
-          <img src="assets/images/2.png" class="d-block w-100" alt="Чай с лепестками">
+          <img src="/assets/images/2.png" class="d-block w-100" alt="Чай с лепестками">
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="img-wrapper">
-          <img src="assets/images/3.png" class="d-block w-100" alt="Чай с клюквой">
+          <img src="/assets/images/3.png" class="d-block w-100" alt="Чай с клюквой">
         </div>
       </ng-template>
     </ngb-carousel>
